@@ -6,7 +6,10 @@ import java.util.List;
 
 public class CONSTANT {
 
-  public static final List<Integer> POINT_LIST = Collections.unmodifiableList(
-      Arrays.asList(1, 2, 3, 5, 8));
+  public static final List<Integer> POINT_LIST = List.of(1, 2, 3, 5, 8);
+
+  public static final Integer CHECK_OUT_TIME = 17;
+
+  public static final String UNDEFINED = "Undefined";
 
 }
